# NewShoes

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DONE.md  HANDOFF_DELETE_AFTER_READING_THIS.md  IDEAS.md  PROJECT.md  README.md  RTT_IMPLEMENTATION_MAP.md  TODO.md
WebAssembly/: ASSETS.md  CLOUDFLARE.md  CMakeLists.txt  DEPLOYMENT.md  README.md  SOURCE_INVENTORY.md  artifacts  dist-release  dist-threaded  dist-threaded-release  package-lock.json  package.json
WebAssembly/bink-decoder/: Cargo.toml  README.md  UPSTREAM_README.md
WebAssembly/bink-decoder/src/: audio.rs  binkb.rs  bitreader.rs  bundle.rs  container.rs  dct.rs  dct3.rs  dsp.rs  error.rs  fft.rs  lib.rs  rdft.rs  (+5 more)
WebAssembly/cloudflare/: coi-serviceworker.js  retire-service-worker.js
WebAssembly/harness/: agent-bridge-config.mjs  agent-webrtc-transport.mjs  agent_bridge.mjs  agent_bridge_browser_smoke.mjs  agent_bridge_config_ui_smoke.mjs  agent_bridge_config_unit.mjs  agent_bridge_match_host.mjs  agent_bridge_unit.mjs  agent_resources_smoke.mjs  agent_webrtc_e2e_smoke.mjs  analytics.mjs  analytics_browser_smoke.mjs  analytics_unit.mjs  audio_miles_webaudio_vertical_smoke.mjs  audio_pool_exhaustion_probe.mjs  audio_request_path_smoke.mjs  audio_startup_activation_smoke.mjs  audio_tab_recovery_smoke.mjs  bink_browser_video_smoke.mjs  bink_decode_worker.mjs  bink_decoder.mjs  bink_direct_decoder_browser_smoke.mjs  bink_direct_runtime.mjs  bink_hosted_transcode_browser_smoke.mjs  bink_provider_sidecar_browser_smoke.mjs  bink_runtime.mjs  bink_transcode_worker.mjs  bink_transcoder.mjs  bink_video_capability_unit.mjs  bink_videoplayer_sidecar_browser_smoke.mjs  bink_w3d_video_buffer_upload_smoke.mjs  bridge.js  browser_runtime_filesystem_assertions.mjs  camera-zoom-config.mjs  camera_scroll_runtime_smoke.mjs  camera_zoom_browser_smoke.mjs  camera_zoom_config_unit.mjs  camera_zoom_runtime_smoke.mjs  challenge_start_smoke.mjs  clickteam-installer.mjs  (+237 more)
WebAssembly/notes/: p1-engine-thread.md  texture_stage_binding_plan.md  webrtc-networking.md  webxr-vr-architecture.md
WebAssembly/pages/: coi-bootstrap.js  coi-direct.js  coi-serviceworker.js  index.html  legal.html  llms.txt  project-content.json  project.md  robots.txt  sitemap.xml
WebAssembly/public/: app.js  fixtures.js  index.html  play.html  play.js  styles.css
WebAssembly/shims/: AABTreeCull.H  AudibleSound.H  AudioEvents.H  Benchmark.h  BitType.H  BrowserEngine.h  D3DX8Math.h  D3dx8core.h  D3dx8tex.h  Dx8Wrapper.h  FFactory.H  GameLogic\Weaponset.h  INICommonCompat.cpp  INICompat.cpp  LightEnvironment.h  Listener.H  LogicalListener.H  LogicalSound.H  Matrix3D.H  Mss.H  PreRTS.H  PreRTS.h  RawFile.H  RealCRC.H  Refcount.H  Sound3D.H  SoundChunkIDs.H  SoundScene.H  SoundSceneObj.H  Texture.h  Vector.H  Vector3.H  WW3D.H  WWDebug.h  atlbase.h  audiosaveload.h  bink.h  bsearch.h  buff.h  compression_eac_port.h  (+84 more)
WebAssembly/src/: aidata_module.cpp  armor_module.cpp  audio_module.cpp  big_archive_module.cpp  campaign_module.cpp  challenge_module.cpp  command_module.cpp  commandmap_module.cpp  controlbar_module.cpp  crate_module.cpp  credits_module.cpp  damagefx_module.cpp  environment_module.cpp  eva_module.cpp  fxlist_module.cpp  gamedata_module.cpp  gamelod_module.cpp  ingameui_module.cpp  ini_module.cpp  locomotor_module.cpp  mappedimage_module.cpp  miscaudio_module.cpp  mouse_module.cpp  multiplayer_module.cpp  ocl_module.cpp  particle_module.cpp  player_template_module.cpp  progression_module.cpp  refpack_module.cpp  roads_module.cpp  terrain_module.cpp  thing_module.cpp  threads_realm_stub.pre.js  transition_module.cpp  video_module.cpp  wasm_agent_api.cpp  wasm_archive_probe.cpp  wasm_archive_probe.h  wasm_audio_manager_probe.cpp  wasm_audio_manager_probe.h  (+83 more)
WebAssembly/tests/: academy_stats_dozer_search_smoke.cpp  bink_video_provider_smoke.cpp  bink_videoplayer_runtime_smoke.cpp  bink_w3d_video_buffer_upload_smoke.cpp  classic_environment_mapper_apply_smoke.cpp  compression_eac_smoke.cpp  compression_manager_smoke.cpp  d3d8_render_state_mapping_smoke.cpp  d3d8_shim_smoke.cpp  d3d8_texture_binding_smoke.cpp  d3d8_texture_lifetime_smoke.cpp  d3d8_texture_stage_state_mapping_smoke.cpp  d3d8_texture_upload_readiness_smoke.cpp  edge_mapper_apply_smoke.cpp  environment_mapper_apply_smoke.cpp  flightdeck_layout_smoke.cpp  gameclient_utility_smoke.cpp  gameengine_common_core_smoke.cpp  gameengine_header_case_smoke.cpp  gameengine_real_big_smoke.cpp  gamelogic_new_game_dispatch_smoke.cpp  gamenetwork_core_smoke.cpp  gamenetwork_download_manager_smoke.cpp  gamespy_lobby_sort_smoke.cpp  gamewindow_input_smoke.cpp  grid_environment_mapper_apply_smoke.cpp  grid_ws_environment_mapper_apply_smoke.cpp  matrixmapper_apply_smoke.cpp  miles_audio_open_device_smoke.cpp  miles_audio_play_sample_smoke.cpp  partition_detach_dirty_smoke.cpp  partition_distance_smoke.cpp  refpack_smoke.cpp  screen_mapper_apply_smoke.cpp  stealth_module_data_default_smoke.cpp  w3d_device_utility_smoke.cpp  w3d_gamewindow_manager_smoke.cpp  w3d_window_layout_script_smoke.cpp  water_projection_state_smoke.cpp  win32_gameengine_lifetime_smoke.cpp  (+53 more)
WebAssembly/tools/: build_aidata_wasm.sh  build_armor_wasm.sh  build_audio_wasm.sh  build_big_wasm.sh  build_bink_decoder.mjs  build_campaign_wasm.sh  build_challenge_wasm.sh  build_cloudflare_site.mjs  build_command_wasm.sh  build_commandmap_wasm.sh  build_controlbar_wasm.sh  build_crate_wasm.sh  build_credits_wasm.sh  build_damagefx_wasm.sh  build_environment_wasm.sh  build_eva_wasm.sh  build_fxlist_wasm.sh  build_gamedata_wasm.sh  build_gamelod_wasm.sh  build_ingameui_wasm.sh  build_ini_wasm.sh  build_locomotor_wasm.sh  build_loose_scripts_big.mjs  build_mappedimage_wasm.sh  build_miscaudio_wasm.sh  build_mouse_wasm.sh  build_multiplayer_wasm.sh  build_ocl_wasm.sh  build_pages_runtime.sh  build_pages_site.mjs  build_particle_wasm.sh  build_player_wasm.sh  build_progression_wasm.sh  build_refpack_wasm.sh  build_roads_wasm.sh  build_seek_bzip_bundle.mjs  build_terrain_wasm.sh  build_thing_wasm.sh  build_transition_wasm.sh  build_trystero_bundle.mjs  (+166 more)
(+626 files in other folders)
